--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,7 @@
     <string name="price_format_from">From ₹%.0f</string>
     <string name="price_format">₹%.2f</string>
     <string name="quantity_format">Qty: %d</string>
+    <string name="search_for_products_brands_and_more">Search for Products, Brands and More</string>
+    <string name="back_button">Back Button</string>
 
 </resources>
